# -Labs

./: README.md
Deanery/: CMakeLists.txt
Deanery/bd/: groups.txt  students.txt
Deanery/files/changed/: groups.txt  students.txt
Deanery/include/: Deanery.h  Group.h  Student.h
Deanery/src/: Deanery.cpp  Group.cpp  Student.cpp  main.cpp
StaffDemo/: CMakeLists.txt
StaffDemo/include/: Employee.h  Engineer.h  Factory.h  Interfaces.h  Manager.h  Personal.h
StaffDemo/info/: Instruction.txt  instruction.txt  projects_info.txt  staff.txt  staff_info.txt
StaffDemo/src/: Employee.cpp  Engineer.cpp  Factory.cpp  Manager.cpp  Personal.cpp  main.cpp
